test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-10 10:08:53.596467

